# unitree_h1_control_ws

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install_additions.bash  install_dependensies.bash  install_python3_dependensies.bash
cmd_to_high_level_control_package/: package.xml  setup.cfg  setup.py
cmd_to_high_level_control_package/cmd_to_high_level_control_package/: cmd_to_high_level_control_node.py
completed_scripts_control/: package.xml  setup.cfg  setup.py
completed_scripts_control/launch/: control_H1_with_hands_launch.py  control_H1_without_hands_launch.py  control_for_slam.launch.py  control_for_slam_with_hands_launch.py  control_for_slam_without_hands_launch.py  control_h1_base.launch.py
gui_control/: package.xml  setup.cfg  setup.py
gui_control/gui_control/: check_position_to_unitree_node.py  gui_check_motors_node.py  gui_control_node.py
h1_info_library/: package.xml  setup.cfg  setup.py
h1_info_library/h1_info_library/: __init__.py  custom_dataclasses.py  limits.py  names_and_indexes.py  names_and_numbers_of_messages.py  utils.py
hands_init/: package.xml  setup.cfg  setup.py
hands_init/hands_init/: hands_init.py
hands_init/resource/communication_pack/: CHANGELOG.md  inspire_ctrl.cpp
hands_init/resource/communication_pack/include/: param.h
high_level_control/: package.xml  setup.cfg  setup.py
high_level_control/high_level_control/: __init__.py  client.py  high_level_control_beautiful_node.py  high_level_control_node.py  high_level_control_simple_node.py  high_level_odom_control.py
inspire_hands_lib/inspire_hand.egg-info/: PKG-INFO  SOURCES.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cmd_to_high_level_control_package/lib/cmd_to_high_level_control_package/: cmd_to_high_level_control_node
install/cmd_to_high_level_control_package/share/cmd_to_high_level_control_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/completed_scripts_control/share/completed_scripts_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gui_control/lib/gui_control/: gui_control_node
install/gui_control/share/gui_control/: package.dsv  package.ps1  package.sh  package.xml
install/h1_info_library/share/h1_info_library/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/high_level_control/lib/high_level_control/: beautiful_node  simple_node
install/high_level_control/share/high_level_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/low_level_control/lib/low_level_control/: hands_init_node  hands_node_with_lib  low_level_control_with_hands_node  low_level_control_without_hands_node  wrist_control_node
install/low_level_control/share/low_level_control/: inspire_hand  package.dsv  package.ps1  package.sh  package.xml
install/teleop_twist_keyboard_custom/lib/teleop_twist_keyboard_custom/: teleop_node
install/teleop_twist_keyboard_custom/share/teleop_twist_keyboard_custom/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
low_level_control/: apt_requirements.txt  package.xml  setup.cfg  setup.py
low_level_control/low_level_control/: DM_CAN.py  hands_init.py  hands_node_with_lib.py  low_level_node_with_hands.py  low_level_node_without_hands.py  wrist_control_node.py
low_level_control/resource/communication_pack/: CHANGELOG.md  CMakeLists.txt  README.md  inspire_ctrl.cpp
low_level_control/resource/communication_pack/include/: SerialPort.h  inspire.h  param.h
low_level_control/resource/communication_pack/include/dds/: Publisher.h  Subscription.h
slider_control/: package.xml  setup.py
slider_control/slider_control/: slider_control_node coppy.txt  slider_control_node.py
teleop_twist_keyboard/: package.xml  setup.py
teleop_twist_keyboard_custom/: package.xml  setup.cfg  setup.py
teleop_twist_keyboard_custom/teleop_twist_keyboard_custom/: teleop_twist_keyboard_custom.py  teleop_twist_keyboard_custom_node.py
test_package/: package.xml  setup.py
unitree_sdk2_python/: setup.py
unitree_sdk2_python/example/b2/camera/: capture_image.py
unitree_sdk2_python/example/b2/high_level/: b2_sport_client.py
unitree_sdk2_python/example/b2/low_level/: b2_stand_example.py
unitree_sdk2_python/example/b2w/camera/: camera_opencv.py
unitree_sdk2_python/example/b2w/high_level/: b2w_sport_client.py
unitree_sdk2_python/example/b2w/low_level/: b2w_stand_example.py
unitree_sdk2_python/example/g1/: readme.md
unitree_sdk2_python/example/g1/audio/: g1_audio_client_example.py  g1_audio_client_play_wav.py  wav.py
unitree_sdk2_python/example/g1/high_level/: g1_arm5_sdk_dds_example.py  g1_arm7_sdk_dds_example.py  g1_arm_action_example.py  g1_loco_client_example.py
unitree_sdk2_python/example/g1/low_level/: g1_low_level_example.py
unitree_sdk2_python/example/go2/front_camera/: capture_image.py
unitree_sdk2_python/example/go2/high_level/: go2_sport_client.py  go2_utlidar_switch.py
unitree_sdk2_python/example/go2/low_level/: go2_stand_example.py
unitree_sdk2_python/example/go2w/high_level/: go2w_sport_client.py
unitree_sdk2_python/example/go2w/low_level/: go2w_stand_example.py
unitree_sdk2_python/example/h1/high_level/: h1_loco_client_example.py
unitree_sdk2_python/example/helloworld/: subscriber.py
unitree_sdk2_python/example/motionSwitcher/: motion_switcher_example.py
unitree_sdk2_python/example/wireless_controller/: wireless_controller.py
unitree_sdk2_python/unitree_sdk2py.egg-info/: PKG-INFO  SOURCES.txt
unitree_sdk2_python/unitree_sdk2py/idl/: default.py
unitree_sdk2_python/unitree_sdk2py/rpc/: client.py  client_base.py  request_future.py  server.py  server_base.py
unitree_sdk2_python/unitree_sdk2py/utils/: future.py
unitree_sdk2py_custom/: package.xml  setup.cfg  setup.py
unitree_sdk2py_custom/unitree_sdk2py_custom/: __init__.py
wrist_control_package/: package.xml  setup.cfg  setup.py
wrist_control_package/wrist_control_package/: wrist_control_node.py
(+71 files in other folders)
