<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_to_high_level_control_package</name>
  <version>1.0.0</version>
  <description>
    Programm Converts velocity commands (Twist) to control signals for Unitree
    H1 robot via ROS 2.
  </description>
  <maintainer email="sashagrachev2005@gmail.com">cyberbanana777</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_sdk2py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
