<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>high_level_control</name>
  <version>1.0.0</version>
  <description>
    This script launches a high-level client that allows you to control the
    Unitree H1 robot using high-level commands (such as damping, readiness,
    and balancing, etc.) as if it were a remote control.
  </description>
  <maintainer email="sashagrachev2005@gmail.com">cyberbanana777</maintainer>
  <license>MIT</license>

  <depend>unitree_sdk2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
