<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>low_level_control</name>
  <version>1.0.0</version>
  <description>
    Implements low-level control for Unitree H1 robot via ROS 2, 
    managing arm joints, fingers and wrists.
  </description>
  <maintainer email="sashagrachev2005@gmail.com">cyberbanana777</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>unitree_go</depend>
  <depend>std_msgs</depend>
  
  <depend>libfmt-dev</depend>
  <depend>libboost-all-dev</depend>
  <depend>libspdlog-dev</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
